--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "hidapi"]
-	path = hidapi
+[submodule "blink1-lib/hidapi"]
+	path = blink1-lib/hidapi
 	url = https://github.com/libusb/hidapi.git
